| Bug #51587 | INNODB STATUS output in plugin weird | ||
|---|---|---|---|
| Submitted: | 28 Feb 2010 16:39 | Modified: | 19 Jun 2010 0:17 |
| Reporter: | Morgan Tocker | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: InnoDB Plugin storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1.x, 5.5.3-m2 | OS: | Any |
| Assigned to: | Calvin Sun | CPU Architecture: | Any |
| Tags: | Contribution | ||
[28 Feb 2010 16:40]
Morgan Tocker
Suggested patch to fix
Attachment: background_thread_innodb_status.patch (application/octet-stream, text), 418 bytes.
[28 Feb 2010 16:57]
Valeriy Kravchuk
Thank you for the problem report and patch contributed.
[1 Apr 2010 12:02]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/104869 3515 Sergey Vojtovich 2010-04-01 Applying InnoDB snashot, fixes BUG#51587. Detailed revision comments: r6767 | calvin | 2010-03-01 18:16:10 +0200 (Mon, 01 Mar 2010) | 3 lines branches/zip: fix bug#51587 Non-functional change.
[6 Apr 2010 7:59]
Bugs System
Pushed into 5.1.46 (revid:sergey.glukhov@sun.com-20100405111026-7kz1p8qlzglqgfmu) (version source revid:svoj@sun.com-20100401151005-c6re90vdvutln15d) (merge vers: 5.1.46) (pib:16)
[5 May 2010 15:14]
Bugs System
Pushed into 5.1.47 (revid:joro@sun.com-20100505145753-ivlt4hclbrjy8eye) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[8 May 2010 17:34]
Paul DuBois
Cosmetic change. No changelog entry needed.
[28 May 2010 6:12]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100524190136-egaq7e8zgkwb9aqi) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (pib:16)
[28 May 2010 6:40]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20100524190941-nuudpx60if25wsvx) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[28 May 2010 7:07]
Bugs System
Pushed into 5.5.5-m3 (revid:alik@sun.com-20100524185725-c8k5q7v60i5nix3t) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[15 Jun 2010 8:14]
Bugs System
Pushed into 5.5.5-m3 (revid:alik@sun.com-20100615080459-smuswd9ooeywcxuc) (version source revid:mmakela@bk-internal.mysql.com-20100415070122-1nxji8ym4mao13ao) (merge vers: 5.1.47) (pib:16)
[15 Jun 2010 8:31]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100615080558-cw01bzdqr1bdmmec) (version source revid:mmakela@bk-internal.mysql.com-20100415070122-1nxji8ym4mao13ao) (pib:16)
[17 Jun 2010 12:17]
Bugs System
Pushed into 5.1.47-ndb-7.0.16 (revid:martin.skold@mysql.com-20100617114014-bva0dy24yyd67697) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[17 Jun 2010 13:04]
Bugs System
Pushed into 5.1.47-ndb-6.2.19 (revid:martin.skold@mysql.com-20100617115448-idrbic6gbki37h1c) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[17 Jun 2010 13:44]
Bugs System
Pushed into 5.1.47-ndb-6.3.35 (revid:martin.skold@mysql.com-20100617114611-61aqbb52j752y116) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)

Description: SHOW ENGINE INNODB STATUS display in 5.1 plugin is inconsistent. Every section has an ascii art header to the correct length except the 'BACKGROUND THREAD'. How to repeat: ===================================== 100228 11:37:26 INNODB MONITOR OUTPUT ===================================== Per second averages calculated from the last 2 seconds ---------- BACKGROUND THREAD ---------- srv_master_thread loops: 1 1_second, 1 sleeps, 0 10_second, 2 background, 2 flush srv_master_thread log flush and writes: 1 ---------- SEMAPHORES ---------- OS WAIT ARRAY INFO: reservation count 7, signal count 7 Mutex spin waits 0, rounds 0, OS waits 0 RW-shared spins 7, OS waits 7; RW-excl spins 0, OS waits 0 Spin rounds per wait: 0.00 mutex, 30.00 RW-shared, 0.00 RW-excl .. Suggested fix: --- srv0srv-old.c 2010-02-27 18:57:21.000000000 -0500 +++ srv0srv.c 2010-02-28 11:33:39.000000000 -0500 @@ -1872,9 +1872,9 @@ "Per second averages calculated from the last %lu seconds\n", (ulong)time_elapsed); - fputs("----------\n" + fputs("-----------------\n" "BACKGROUND THREAD\n" - "----------\n", file); + "-----------------\n", file); srv_print_master_thread_info(file); fputs("----------\n"