branches/zip: fix bug#51587 Non-functional change.